# signal-hermes-router

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  pyproject.toml  release-please-config.json  routes.example.yaml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  release-please.yml
docs/: configuration.md  deployment.md  hermes-gateway-tradeoffs.md  media.md  no-reply-sentinel.md  permissions.md  profile-audit-checklist.md  releasing.md  route-context.md  scheduled-synthetic-events.md
scripts/: check-private-config.py  check-public-boundary.py  check-release-head.py  deploy-service-tree.sh
src/signal_hermes_router/: __init__.py  acp.py  circuit.py  cli.py  config.py  context.py  dedupe.py  events.py  failures.py  media.py  mime.py  (+14 more)
tests/: support.py  test_acp.py  test_chunking.py  test_cli_sessions.py  test_config.py  test_context_media.py  test_dedupe_redaction_secrets.py  test_deploy_script.py  test_events_signal.py  test_failures.py  test_outbound_media.py  test_permissions.py  test_preflight.py  test_private_config_script.py  test_public_boundary.py  test_ratelimit.py  test_release_head.py  test_release_process.py  test_router.py  test_router_basic.py  test_router_busy.py  test_router_child_exit.py  test_router_circuit.py  test_router_concurrency.py  test_router_control.py  test_router_dedupe.py  test_router_direct.py  test_router_media.py  test_router_notify.py  test_router_reload.py  test_router_session.py  test_router_shutdown.py  test_router_sweep.py  test_router_synthetic.py
(+4 files in other folders)
