[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "signal-hermes-router"
version = "0.1.36"
description = "Transport router from one Signal account to isolated Hermes profiles over ACP"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
license-files = ["LICENSE"]
authors = [
  { name = "deadmanoz" },
]
maintainers = [
  { name = "deadmanoz" },
]
keywords = ["signal", "hermes", "agent-client-protocol", "router"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Chat",
]
dependencies = [
  "httpx>=0.27",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "coverage>=7.0",
  "ruff>=0.8",
]

[project.scripts]
signal-hermes-router = "signal_hermes_router.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/signal_hermes_router"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.coverage.run]
branch = true
source = ["signal_hermes_router"]

[tool.coverage.report]
fail_under = 95
show_missing = true
